--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "build": "webpack --mode=development",
         "prod": "webpack --mode=production",
         "serve": "webpack serve --mode=development",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "vitest",
+        "test:e2e": "playwright test"
     },
     "keywords": [],
     "author": "",
@@ -15,6 +16,7 @@
     "type": "module",
     "module": "src/index.js",
     "devDependencies": {
+        "@playwright/test": "^1.58.1",
         "d3": "^7.9.0",
         "d3-drag": "^3.0.0",
         "d3-ease": "^3.0.1",
@@ -29,6 +31,8 @@
         "eslint": "^9.39.1",
         "eslint-plugin-import": "^2.32.0",
         "eslint-webpack-plugin": "^5.0.2",
+        "jsdom": "^28.0.0",
+        "vitest": "^4.0.18",
         "webpack": "^5.102.1",
         "webpack-cli": "^6.0.1",
         "webpack-dev-server": "^5.2.3"
